--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,7 +4,7 @@
     align-items: center;
     padding-top: 0.5rem;
     height: 15rem;
-    background-image: url(../../Img/WoodenSign.png);
+    background-image: url(../../Assets/WoodenSign.png);
     background-position: 50% 32%;
     background-repeat: no-repeat;
     background-size: 80rem 21rem;
